k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unip-autoscaler
  namespace: unip-system-autoscaler
spec:
  selector:
    app: unip-autoscaler
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: prometheus
      protocol: TCP
      port: 10254
      targetPort: prometheus
