k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unip-autoscaler
  namespace: unip-system-autoscaler
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unip-autoscaler
  template:
    metadata:
      labels:
        app: unip-autoscaler
    spec:
      serviceAccountName: unip-autoscaler
      containers:
        - name: unip-autoscaler
          image: platform-reg.stratpro.hse.ru/registry-user/unip-autoscaler:v1
          imagePullPolicy: Always
          volumeMounts:
            - name: autoscaler-props
              mountPath: /etc/unip-autoscaler
      imagePullSecrets:
        - name: registry-credentials
      volumes:
        - name: autoscaler-props
          configMap:
            name: autoscaler-props
---
apiVersion: v1
kind: Service
metadata:
  name: unip-autoscaler
  namespace: unip-system-autoscaler
spec:
  selector:
    app: unip-autoscaler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unip-autoscaler-ingress
  namespace: unip-system-autoscaler
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - platform.stratpro.hse.ru
  rules:
    - host: platform.stratpro.hse.ru
      http:
        paths:
          - path: /autoscaler(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: unip-autoscaler
                port:
                  number: 80
