k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unip-autoscaler-ingress
  namespace: unip-system-autoscaler
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - platform-dev.stratpro.hse.ru
  rules:
    - host: platform-dev.stratpro.hse.ru
      http:
        paths:
          - path: /autoscaler(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: unip-autoscaler
                port:
                  number: 80
