k8s/python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonserver
  namespace: unip-system-autoscaler
spec:
  selector:
    matchLabels:
      app: pythonserver
  template:
    metadata:
      labels:
        app: pythonserver
    spec:
      containers:
        - name: pythonserver
          image: python
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          command: ["python", "-m", "http.server", "-b", "0.0.0.0", "3000"]
      nodeSelector:
        pythonserver-node: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: pythonserver
  namespace: unip-system-autoscaler
spec:
  selector:
    app: pythonserver
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonserver
  namespace: unip-system-autoscaler
  labels:
    name: pythonserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: platform-dev.stratpro.hse.ru
    http:
      paths:
      - path: /pythonserver
        pathType: Prefix
        backend:
          service:
            name: pythonserver
            port:
              number: 80
  tls:
  - hosts:
    - platform-dev.stratpro.hse.ru
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: unip-system-autoscaler
spec:
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
        - name: curl
          image: alpine/curl
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          command: ["sleep", "infinity"]
